--- a/app/src/main/res/layout/fragment_add_evaluative.xml
+++ b/app/src/main/res/layout/fragment_add_evaluative.xml
@@ -8,7 +8,7 @@
         android:layout_height="match_parent">
 
 
-        /<TextView
+        <TextView
             android:id="@+id/add_eval"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
