--- a/app/src/main/res/layout/fragment_add_extraclass.xml
+++ b/app/src/main/res/layout/fragment_add_extraclass.xml
@@ -1,168 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/add_extra"
-        android:layout_width="wrap_content"
-        android:layout_height="92dp"
-        android:layout_marginTop="60dp"
-        android:fontFamily="@font/days_one"
-        android:gravity="center"
-        android:text="Add Extra Class"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/add_extra_header"
+            style="@style/form_header_style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="@string/add_extra_class_header"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/subject"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:fontFamily="@font/roboto"
-        android:gravity="start"
-        android:text="Subject"
-        android:textColor="#0077C2"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/subject_spinner"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/subject_spinner"
-        app:layout_constraintTop_toBottomOf="@+id/add_extra" />
+        <TextView
+            android:id="@+id/subject"
+            style="@style/form_text_style"
+            android:layout_marginTop="72dp"
+            android:text="@string/subject"
+            app:layout_constraintEnd_toEndOf="@+id/subject_spinner"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/subject_spinner"
+            app:layout_constraintTop_toBottomOf="@+id/add_extra_header" />
 
-    <Spinner
-        android:id="@+id/subject_spinner"
-        android:layout_width="360dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/spinner_bg"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/subject" />
+        <Spinner
+            android:id="@+id/subject_spinner"
+            android:layout_width="0dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="24dp"
+            android:background="@drawable/spinner_border"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/subject" />
 
-    <TextView
-        android:id="@+id/date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="57dp"
-        android:fontFamily="@font/roboto"
-        android:gravity="start"
-        android:text="Date"
-        android:textColor="#0077C2"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/date_spinner"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/date_spinner"
-        app:layout_constraintTop_toBottomOf="@+id/subject_spinner" />
+        <TextView
+            android:id="@+id/date"
+            style="@style/form_text_style"
+            android:layout_marginTop="64dp"
+            android:text="@string/date"
+            app:layout_constraintEnd_toEndOf="@+id/date_spinner"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/date_spinner"
+            app:layout_constraintTop_toBottomOf="@+id/subject_spinner" />
 
-    <TextView
-        android:id="@+id/type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="58dp"
-        android:fontFamily="@font/roboto"
-        android:gravity="start"
-        android:text="Type"
-        android:textColor="#0077C2"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/type_spinner"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/type_spinner"
-        app:layout_constraintTop_toBottomOf="@+id/subject_spinner" />
+        <TextView
+            android:id="@+id/type"
+            style="@style/form_text_style"
+            android:layout_marginTop="64dp"
+            android:text="@string/type"
+            app:layout_constraintEnd_toEndOf="@+id/type_spinner"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/type_spinner"
+            app:layout_constraintTop_toBottomOf="@+id/subject_spinner" />
 
-    <Spinner
-        android:id="@+id/date_spinner"
-        android:layout_width="148dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/spinner_bg"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/date" />
+        <Spinner
+            android:id="@+id/date_spinner"
+            android:layout_width="148dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/spinner_border"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/date" />
 
-    <Spinner
-        android:id="@+id/type_spinner"
-        android:layout_width="148dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="246dp"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/spinner_bg"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/type" />
+        <Spinner
+            android:id="@+id/type_spinner"
+            android:layout_width="148dp"
+            android:layout_height="36dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="24dp"
+            android:background="@drawable/spinner_border"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/date_spinner"
+            app:layout_constraintTop_toBottomOf="@+id/type" />
 
-    <TextView
-        android:id="@+id/start_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:fontFamily="@font/roboto"
-        android:gravity="start"
-        android:text="Start Time"
-        android:textColor="#0077C2"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/start_time_spinner"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/start_time_spinner"
-        app:layout_constraintTop_toBottomOf="@+id/date_spinner" />
+        <TextView
+            android:id="@+id/start_time"
+            style="@style/form_text_style"
+            android:layout_marginTop="64dp"
+            android:text="@string/start_time"
+            app:layout_constraintEnd_toEndOf="@+id/start_time_spinner"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/start_time_spinner"
+            app:layout_constraintTop_toBottomOf="@+id/date_spinner" />
 
-    <TextView
-        android:id="@+id/end_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:fontFamily="@font/roboto"
-        android:gravity="start"
-        android:text="End Time"
-        android:textColor="#0077C2"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/end_time_spinner"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/end_time_spinner"
-        app:layout_constraintTop_toBottomOf="@+id/type_spinner" />
+        <TextView
+            android:id="@+id/end_time"
+            style="@style/form_text_style"
+            android:layout_marginTop="64dp"
+            android:text="@string/end_time"
+            app:layout_constraintEnd_toEndOf="@+id/end_time_spinner"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/end_time_spinner"
+            app:layout_constraintTop_toBottomOf="@+id/type_spinner" />
 
-    <Spinner
-        android:id="@+id/start_time_spinner"
-        android:layout_width="148dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/spinner_bg"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/start_time" />
+        <Spinner
+            android:id="@+id/start_time_spinner"
+            android:layout_width="148dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/spinner_border"
+            app:layout_constraintEnd_toStartOf="@+id/end_time_spinner"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/start_time" />
 
-    <Spinner
-        android:id="@+id/end_time_spinner"
-        android:layout_width="148dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="244dp"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/spinner_bg"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/end_time" />
+        <Spinner
+            android:id="@+id/end_time_spinner"
+            android:layout_width="148dp"
+            android:layout_height="36dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="24dp"
+            android:background="@drawable/spinner_border"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/start_time_spinner"
+            app:layout_constraintTop_toBottomOf="@+id/end_time" />
 
-    <Button
-        android:id="@+id/add"
-        android:layout_width="92dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="432dp"
-        android:background="@drawable/btn_bg"
-        android:fontFamily="@font/roboto"
-        android:text="Add"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/add_extra" />
+        <Button
+            android:id="@+id/add"
+            style="@style/form_button_style"
+            android:text="@string/button_add"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
