--- a/app/src/main/res/drawable/ic_baseline_play_arrow_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_play_arrow_24.xml
@@ -1,5 +1,10 @@
-<vector android:height="140dp" android:tint="#000000"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="170dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M8,5v14l11,-7z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="170dp"
+    android:height="140dp"
+    android:tint="#000000"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M8,5v14l11,-7z" />
 </vector>
