--- a/app/src/main/res/drawable/ic_baseline_stop_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_stop_24.xml
@@ -1,5 +1,10 @@
-<vector android:height="140dp" android:tint="#000000"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="140dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M6,6h12v12H6z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="140dp"
+    android:height="140dp"
+    android:tint="#000000"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M6,6h12v12H6z" />
 </vector>
