--- a/app/src/main/res/drawable/ic_timer_down.xml
+++ b/app/src/main/res/drawable/ic_timer_down.xml
@@ -1,5 +1,10 @@
-<vector android:height="36dp" android:tint="#FDFDFD"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="80dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM12,14l-4,-4h8l-4,4z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="80dp"
+    android:height="36dp"
+    android:tint="#FDFDFD"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM12,14l-4,-4h8l-4,4z" />
 </vector>
