--- a/app/src/main/res/drawable/spinner_border.xml
+++ b/app/src/main/res/drawable/spinner_border.xml
@@ -1,20 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-<item>
-    <layer-list>
-        <item>
-            <shape android:shape="rectangle">
-                <corners
-                android:bottomRightRadius="13dp"
-                android:bottomLeftRadius="13dp"
-                android:topLeftRadius="13dp"
-                android:topRightRadius="13dp"/>
-                <stroke
-                    android:color="#80D6FF"
-                    android:width="2.5dp"/></shape>
-        </item>
-        <item android:left="48dp" android:drawable="@drawable/ic_baseline_arrow_drop_down_24">
-        </item>
-    </layer-list>
-</item>
+    <item>
+        <layer-list>
+            <item>
+                <shape android:shape="rectangle">
+                    <stroke android:width="3.5dp" android:color="@color/app_primary" />
+                    <corners android:radius="13dp" />
+                    <padding android:left="4dp" android:right="12dp" />
+                </shape>
+            </item>
+            <item android:drawable="@drawable/ic_baseline_arrow_drop_down_24" android:gravity="end" />
+        </layer-list>
+    </item>
 </selector>
