--- a/app/src/main/res/drawable/timer_spinner.xml
+++ b/app/src/main/res/drawable/timer_spinner.xml
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
     <item>
         <layer-list>
             <item>
                 <shape android:shape="rectangle">
-                    <stroke
-                        android:color="#FFFFFF"
-                        android:width="8dp"></stroke>
-                    <corners android:radius="36dp"></corners>
-                    <padding android:right="0dp"
-                        android:left="0dp"></padding>
+                    <stroke android:width="8dp" android:color="#FFFFFF" />
+                    <corners android:radius="36dp" />
+                    <padding android:left="0dp" android:right="0dp" />
                 </shape>
             </item>
-            <item android:drawable="@drawable/ic_timer_down"
-                android:gravity="end"></item>
-
+            <item android:drawable="@drawable/ic_timer_down" android:gravity="end" />
         </layer-list>
     </item>
 </selector>
