--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
             android:layout_marginTop="64dp"
             android:layout_marginEnd="8dp"
             android:fontFamily="@font/days_one"
-            android:text="You look like a new user,"
+            android:text="@string/register_header"
             android:textColor="#928D8D"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -32,7 +32,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
             android:fontFamily="@font/days_one"
-            android:text="We would like to know about you..."
+            android:text="@string/register_sub_header"
             android:textColor="#000000"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -42,23 +42,18 @@
 
         <TextView
             android:id="@+id/your_name_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/form_text_style"
             android:layout_marginTop="40dp"
-            android:fontFamily="@font/roboto_bold"
-            android:text="What should we call you?"
-            android:textColor="#0077C2"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/name"
-            app:layout_constraintEnd_toEndOf="@+id/name"
+            android:text="@string/enter_name"
+            app:layout_constraintBottom_toTopOf="@+id/name_edit_text"
+            app:layout_constraintEnd_toEndOf="@+id/name_edit_text"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/name"
+            app:layout_constraintStart_toStartOf="@+id/name_edit_text"
             app:layout_constraintTop_toBottomOf="@+id/subheader"
             app:layout_constraintVertical_chainStyle="packed" />
 
         <EditText
-            android:id="@+id/name"
+            android:id="@+id/name_edit_text"
             android:layout_width="0dp"
             android:layout_height="36dp"
             android:layout_marginStart="16dp"
@@ -67,7 +62,7 @@
             android:layout_marginBottom="40dp"
             android:background="@drawable/edit_text_border"
             android:fontFamily="@font/roboto_bold"
-            android:hint="Your Name..."
+            android:hint="@string/your_name_hint"
             android:textSize="14sp"
             app:layout_constraintBottom_toTopOf="@+id/your_id_text"
             app:layout_constraintEnd_toEndOf="parent"
@@ -77,20 +72,15 @@
 
         <TextView
             android:id="@+id/your_id_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto_bold"
-            android:text="Enter your College ID"
-            android:textColor="#0077C2"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/id"
-            app:layout_constraintEnd_toEndOf="@+id/id"
+            style="@style/form_text_style"
+            android:text="@string/college_id"
+            app:layout_constraintBottom_toTopOf="@+id/id_edit_text"
+            app:layout_constraintEnd_toEndOf="@+id/id_edit_text"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/id" />
+            app:layout_constraintStart_toStartOf="@+id/id_edit_text" />
 
         <EditText
-            android:id="@+id/id"
+            android:id="@+id/id_edit_text"
             android:layout_width="0dp"
             android:layout_height="36dp"
             android:layout_marginStart="16dp"
@@ -98,7 +88,7 @@
             android:layout_marginEnd="24dp"
             android:background="@drawable/edit_text_border"
             android:fontFamily="@font/roboto_bold"
-            android:hint="Your ID..."
+            android:hint="@string/college_id_hint"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -110,59 +100,47 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="40dp"
-            android:buttonTint="#80D6FF"
-            app:layout_constraintEnd_toStartOf="@+id/fresher_text"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="8dp"
+            android:buttonTint="@color/app_primary"
+            android:text="@string/are_you_a_fresher"
+            android:textColor="@color/app_secondary"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/id" />
-
-        <TextView
-            android:id="@+id/fresher_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto_bold"
-            android:text="Are you a Fresher?"
-            android:textColor="#0077C2"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/fresher_checkbox"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/fresher_checkbox"
-            app:layout_constraintTop_toTopOf="@+id/fresher_checkbox"
-            app:layout_constraintVertical_bias="0.482" />
+            app:layout_constraintTop_toBottomOf="@+id/id_edit_text" />
 
         <TextView
             android:id="@+id/current_semester_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:fontFamily="@font/roboto_bold"
-            android:text="Which semester are\nyou currently in?"
-            android:textColor="#0077C2"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/spinner"
+            style="@style/form_text_style"
+            android:layout_marginTop="32dp"
+            android:text="@string/current_sem"
+            app:layout_constraintEnd_toEndOf="@+id/current_sem_spinner"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/spinner"
-            app:layout_constraintTop_toBottomOf="@+id/fresher_text" />
+            app:layout_constraintStart_toStartOf="@+id/current_sem_spinner"
+            app:layout_constraintTop_toBottomOf="@+id/fresher_checkbox" />
+
+        <Spinner
+            android:id="@+id/current_sem_spinner"
+            android:layout_width="100dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/spinner_border"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/current_semester_text" />
 
         <TextView
             android:id="@+id/current_cgpa_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:fontFamily="@font/roboto_bold"
-            android:text="Enter your Current\nCGPA"
-            android:textColor="#0077C2"
-            android:textSize="14sp"
-            android:textStyle="bold"
+            style="@style/form_text_style"
+            android:layout_marginTop="32dp"
+            android:text="@string/current_cg"
             app:layout_constraintEnd_toEndOf="@+id/current_cgpa"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/current_cgpa"
-            app:layout_constraintTop_toBottomOf="@+id/fresher_text" />
+            app:layout_constraintTop_toBottomOf="@+id/fresher_checkbox" />
 
         <EditText
             android:id="@+id/current_cgpa"
@@ -172,26 +150,21 @@
             android:layout_marginEnd="24dp"
             android:background="@drawable/edit_text_border"
             android:fontFamily="@font/roboto_bold"
-            android:hint="8.69"
+            android:hint="@string/current_cg_hint"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/spinner"
+            app:layout_constraintStart_toEndOf="@+id/current_sem_spinner"
             app:layout_constraintTop_toBottomOf="@+id/current_cgpa_text" />
 
         <TextView
             android:id="@+id/credits_completed_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/form_text_style"
             android:layout_marginTop="40dp"
-            android:fontFamily="@font/roboto_bold"
-            android:text="Enter number of\ncredits completed"
-            android:textColor="#0077C2"
-            android:textSize="14sp"
-            android:textStyle="bold"
+            android:text="@string/num_creds"
             app:layout_constraintEnd_toEndOf="@+id/credits_completed"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/credits_completed"
-            app:layout_constraintTop_toBottomOf="@+id/spinner" />
+            app:layout_constraintTop_toBottomOf="@+id/current_sem_spinner" />
 
         <EditText
             android:id="@+id/credits_completed"
@@ -202,7 +175,7 @@
             android:layout_marginEnd="24dp"
             android:background="@drawable/edit_text_border"
             android:fontFamily="@font/roboto_bold"
-            android:hint="74"
+            android:hint="@string/num_creds_hint"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -211,27 +184,10 @@
 
         <Button
             android:id="@+id/next_button"
-            android:layout_width="0dp"
-            android:layout_height="36dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="24dp"
-            android:backgroundTint="#0077C2"
-            android:textStyle="bold"
-            android:textColor="#FFFFFF"
-            android:text="Next"
+            style="@style/form_button_style"
+            android:text="@string/button_next"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
-
-        <Spinner
-            android:id="@+id/spinner"
-            android:layout_width="100dp"
-            android:layout_height="36dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/current_semester_text"
-            android:background="@drawable/spinner_border"
-            android:onNothingSelected="1"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
