--- a/app/src/main/res/layout/fragment_stopwatch_screen.xml
+++ b/app/src/main/res/layout/fragment_stopwatch_screen.xml
@@ -1,49 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#80d6ff">
+        android:background="@color/app_primary">
 
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="623dp"
-            android:layout_height="629dp"
-            android:background="@drawable/stopwatch_round"
-            android:elevation="10dp"
-            android:gravity="center"
-            android:layoout_gravity="center"
-            android:orientation="vertical"
-            android:radius="300dp"
-            app:layout_constraintBottom_toTopOf="@+id/pay_button"
+        <ImageView
+            android:id="@+id/background_circle"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="32dp"
+            app:layout_constraintBottom_toTopOf="@+id/play_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spinner"
-            tools:context=".MainActivity">
+            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            app:srcCompat="@drawable/stopwatch_round" />
 
-            <Chronometer
-                android:id="@+id/chronometer"
-                android:layout_width="236dp"
-                android:layout_height="139dp"
-                android:fontFamily="@font/roboto"
-                android:format="00:00"
-                android:gravity="center"
-                android:textColor="#FFFFFF"
-                android:textSize="84sp"
-                android:textStyle="bold" />
-
-
-        </LinearLayout>
+        <Chronometer
+            android:id="@+id/timer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto"
+            android:format="00:00"
+            android:gravity="center"
+            android:textColor="#FFFFFF"
+            android:textSize="120sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/background_circle"
+            app:layout_constraintEnd_toEndOf="@+id/background_circle"
+            app:layout_constraintStart_toStartOf="@+id/background_circle"
+            app:layout_constraintTop_toTopOf="@+id/background_circle" />
 
         <ImageButton
-            android:id="@+id/pay_button"
-            android:layout_width="169dp"
+            android:id="@+id/play_button"
+            android:layout_width="166dp"
             android:layout_height="166dp"
             android:layout_marginBottom="64dp"
-            android:background="@drawable/image_btn"
+            android:background="@drawable/play_button_background"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/stop_button"
             app:layout_constraintHorizontal_bias="0.5"
@@ -52,26 +50,26 @@
 
         <ImageButton
             android:id="@+id/stop_button"
-            android:layout_width="181dp"
-            android:layout_height="165dp"
-            android:background="#80d6ff"
-            app:layout_constraintBottom_toBottomOf="@+id/pay_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/app_primary"
+            app:layout_constraintBottom_toBottomOf="@+id/play_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/pay_button"
-            app:layout_constraintTop_toTopOf="@+id/pay_button"
+            app:layout_constraintStart_toEndOf="@+id/play_button"
+            app:layout_constraintTop_toTopOf="@+id/play_button"
             app:srcCompat="@drawable/ic_baseline_stop_24" />
 
         <ImageButton
             android:id="@+id/music_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#80d6ff"
-            app:layout_constraintBottom_toBottomOf="@+id/pay_button"
-            app:layout_constraintEnd_toStartOf="@+id/pay_button"
+            android:background="@color/app_primary"
+            app:layout_constraintBottom_toBottomOf="@+id/play_button"
+            app:layout_constraintEnd_toStartOf="@+id/play_button"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/pay_button"
+            app:layout_constraintTop_toTopOf="@+id/play_button"
             app:srcCompat="@drawable/ic_baseline_music_note_24" />
 
         <ImageView
@@ -80,7 +78,7 @@
             android:layout_height="74dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="64dp"
-            app:layout_constraintEnd_toStartOf="@+id/spinner"
+            app:layout_constraintEnd_toStartOf="@+id/current_sem_spinner"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
@@ -88,19 +86,17 @@
             app:srcCompat="@drawable/ic_timer_headset" />
 
         <Spinner
-            android:id="@+id/spinner"
+            android:id="@+id/current_sem_spinner"
             android:layout_width="414dp"
             android:layout_height="74dp"
             android:layout_marginTop="64dp"
             android:layout_marginEnd="32dp"
             android:background="@drawable/timer_spinner"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toTopOf="parent" />
 
-
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 </layout>
